# oxocard-firmware

./: build.py  justfile  pyproject.toml
templates/: manifest.json
